--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "devDependencies": {
         "@picocss/pico": "^1.5.10",
         "@playwright/test": "^1.28.1",
-        "@supabase/auth-helpers-sveltekit": "^0.8.6",
+        "@supabase/auth-helpers-sveltekit": "^0.8.7",
         "@supabase/supabase-js": "^2.1.3",
         "@sveltejs/adapter-auto": "next",
         "@sveltejs/kit": "next",
@@ -26,6 +26,7 @@
         "eslint": "^8.28.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-svelte3": "^4.0.0",
+        "leaflet": "^1.9.4",
         "postcss": "^8.4.14",
         "postcss-load-config": "^4.0.1",
         "postcss-preset-env": "^7.8.3",
@@ -40,5 +41,9 @@
         "vite": "^4.0.0",
         "vitest": "^0.25.3"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "@types/geojson": "^7946.0.10",
+        "@types/leaflet": "^1.9.3"
+    }
 }
