--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "type": "module",
     "dependencies": {
         "@types/geojson": "^7946.0.10",
-        "@types/leaflet": "^1.9.3"
+        "@types/leaflet": "^1.9.3",
+        "leaflet.control.layers.tree": "^1.1.0"
     }
 }
